<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_gradient_bg"
    android:orientation="vertical"
    tools:context=".views.HomeActivity"
    tools:ignore="Overdraw">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/home_gradient_bg"
        android:orientation="vertical">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/lease_home_image"
                    android:src="@drawable/ic_lease_one"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:letterSpacing="0.2"
                    android:text="@string/leaseinfo"
                    android:textColor="@color/colorWhite"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-2dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/know_your_lease_info"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fr_home"
            android:name="co.jei.leaseapp.views.fragments.HomeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/layout_progress"
        layout="@layout/layout_progress_indicator"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>